--- a/frontend/src/pages/WishListPage/WishlistPage.module.scss
+++ b/frontend/src/pages/WishListPage/WishlistPage.module.scss
@@ -3,3 +3,31 @@
 	min-height: 100vh;
 	padding-bottom: 80px;
 }
+
+.title {
+	text-align: center;
+	margin-bottom: 32px !important;
+}
+
+.list {
+	max-width: 800px;
+	margin: 0 auto;
+}
+
+.loadMore {
+	display: flex;
+	justify-content: center;
+	margin: 24px 0;
+}
+
+.spinner {
+	display: block;
+	margin: 40px auto;
+}
+
+.empty {
+	text-align: center;
+	font-size: 16px;
+	color: rgba(0, 0, 0, 0.45);
+	padding: 40px 0;
+}
