final front need elastick

--- a/frontend/src/pages/ProductPage/ProductPage.module.scss
+++ b/frontend/src/pages/ProductPage/ProductPage.module.scss
@@ -1,7 +1,8 @@
 .container {
 	padding: 16px;
 	background: white;
-	min-height: 100vh;
+	min-height: 200vh;
+	padding-bottom: 90px;
 }
 
 .backButton {
