--- a/frontend/src/pages/CartPage/CartPage.module.scss
+++ b/frontend/src/pages/CartPage/CartPage.module.scss
@@ -47,6 +47,16 @@
 	display: block;
 	margin: 40px auto;
 }
+.emptyContent {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 16px;
+
+	.ant-btn {
+		margin-top: 12px;
+	}
+}
 
 .empty {
 	display: flex;
