--- a/frontend/src/pages/WishListPage/WishlistPage.module.scss
+++ b/frontend/src/pages/WishListPage/WishlistPage.module.scss
@@ -26,8 +26,20 @@
 }
 
 .empty {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 16px;
 	text-align: center;
-	font-size: 16px;
-	color: rgba(0, 0, 0, 0.45);
 	padding: 40px 0;
+}
+.emptyContent {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 16px;
+
+	.ant-btn {
+		margin-top: 12px;
+	}
 }
