--- a/frontend/src/components/OrderCard/OrderCard.module.scss
+++ b/frontend/src/components/OrderCard/OrderCard.module.scss
@@ -9,7 +9,16 @@
 		transform: translateY(-2px);
 	}
 }
-
+.imageContainer {
+	position: relative;
+	aspect-ratio: 1/1;
+}
+.image {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 4px;
+}
 .header {
 	display: flex;
 	justify-content: space-between;
@@ -39,4 +48,26 @@
 .footer {
 	display: flex;
 	justify-content: space-between;
+}
+.remainingBadge {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: rgba(0, 0, 0, 0.3);
+	color: rgb(255, 255, 255);
+	border-radius: 4px;
+	font-size: 150%;
+	font-weight: bold;
+	transition: all 0.2s ease;
+	backdrop-filter: blur(5px);
+	&:hover {
+		background-color: rgba(0, 0, 0, 0.1);
+		font-size: 1.4rem;
+		color: rgb(8, 0, 255);
+	}
 }
