--- a/frontend/src/pages/HomePage/HomePage.module.scss
+++ b/frontend/src/pages/HomePage/HomePage.module.scss
@@ -2,6 +2,8 @@
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+	background: #f5f5f5;
+	background-color: #f5f5f5;
 
 	h1 {
 		padding: 24px;
